--- a/chessboard.html
+++ b/chessboard.html
@@ -12,6 +12,9 @@
         <div id  = "root"></div>
         <script src = "constants.js"></script>
         <script src = "utils.js"></script>
+        <script src = "chessUtils.js"></script>
+        <script src = "chessMovementsController.js"></script>
+
         <script src = "chessboard.js"></script>
 
 
