Completed board setup and started adding logic to validae piece move

--- a/chessboard.html
+++ b/chessboard.html
@@ -11,13 +11,13 @@
 
         <div id  = "root"></div>
         <script src = "constants.js"></script>
+        <script src = "globalVariables.js"></script>
+        <script src = "initialPositions.js"></script>
         <script src = "utils.js"></script>
+        <script src = "chessPieceUtils.js"></script>
         <script src = "chessUtils.js"></script>
         <script src = "chessMovementsController.js"></script>
-
         <script src = "chessboard.js"></script>
-
-
 
     </body>
 
