--- a/chessboard.html
+++ b/chessboard.html
@@ -14,8 +14,9 @@
         <script src = "globalVariables.js"></script>
         <script src = "initialPositions.js"></script>
         <script src = "utils.js"></script>
+        <script src = "chessMovementsValidator.js"></script>
         <script src = "chessPieceUtils.js"></script>
-        <script src = "chessUtils.js"></script>
+        <script src = "chessBoardUtils.js"></script>
         <script src = "chessMovementsController.js"></script>
         <script src = "chessboard.js"></script>
 
