Added check validations for king from all other pieces

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <script src = "globalVariables.js"></script>
         <script src = "initialPositions.js"></script>
         <script src = "utils.js"></script>
-        <script src = "chessMovementsValidator.js"></script>
         <script src = "chessPieceUtils.js"></script>
         <script src = "chessBoardUtils.js"></script>
+        <script src = "checkMoveValidator.js"></script>
+        <script src = "chessMovementsValidator.js"></script>
         <script src = "chessMovementsController.js"></script>
         <script src = "chessboard.js"></script>
 
