Added basic castling functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src = "initialPositions.js"></script>
         <script src = "utils.js"></script>
         <script src = "chessPieceUtils.js"></script>
+        <script src = "castlingUtils.js"></script>
         <script src = "chessBoardUtils.js"></script>
         <script src = "checkMoveValidator.js"></script>
         <script src = "chessMovementsValidator.js"></script>
